--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 
     <p><em>This</em> is an <strong>example!</strong></p>
 
+    <ul>
+        <li>Dog</li>
+        <li>Cat</li>
+        <li>Dragon</li>
+        <li>Monkey</li>
+    </ul>
+
 
 
 </body>
